A new step to the HTML5 compliance. Adjust the DOCTYPE and the <html> tag in the pages header.

--- a/css/index.css
+++ b/css/index.css
@@ -22,13 +22,14 @@ body {
     width: 225px;
 	flex-shrink: 0;
 	resize: horizontal;
-	overflow: scroll;
+	overflow: hidden;
 }
 
 #mainDiv {
     display: inline-block;
 	height: 100%;
     width: 100%;
+	overflow: hidden;
 }
 
 #browserFrame {
