--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ body {
 	bottom: 0px;
 	margin: 0;
 	padding: 4px;
-	background: #383840;
+	background: #203c4f;
 	border-top: 1px dotted #999;
 	border-left: 1px dotted #999;
 	height: 16px;
