--- a/css/browser.css
+++ b/css/browser.css
@@ -48,7 +48,14 @@ div.refresh {
 	z-index: 6;
 }
 div.refresh img {
-	margin-right: 5px
+	width: 22px;
+	height: 22px;
+	padding: 1px 4px 1px 1px;
+	background-color: inherit;
+}
+div.refresh img:hover {
+	background-color: #ffffff;
+	transition: background-color 0.4s;
 }
 
 /** Browser Tree using XLoadTree 2 **/
