At the bottom of the page displaying the tables groups, align the three buttons on a same line. Rename the button used to create a new tables group. And enlarge the <hr> to have a little bit more space between sections.

--- a/css/global.css
+++ b/css/global.css
@@ -76,10 +76,8 @@ p.error-message {
 }
 
 hr {
-	color: #ffffff;
-	background-color: #ffffff;
 	height: 0px;
-	margin-top: 20px;
+	padding: 5px;
 	border: 0;
 }
 
