Add a new data type in the printVal() function of Misc.php in order to handle comment data. The comment string is clipped if it is larger than a cliplen number of characters. In this case, the full comment string is put inside a <span> element. Used with a proper css class, this allows nice abbreviated comment with the entire value appearing in tooltip when the mouse is placed over the field. Use this new type to display comments about databases, schemas, tables, columns, sequences, tables groups and marks. Remove the "show_comments" configuration parameter, as comments are always displayed.

--- a/css/global.css
+++ b/css/global.css
@@ -61,10 +61,6 @@ p.error-message {
 	font-weight: bold;
 	color: red;
 }
-.comment {
-	font-style: italic;
-	color: #555555;
-}
 .left {
 	text-align: left;
 }
@@ -194,13 +190,26 @@ th.required {
 	text-decoration: underline
 }
 
+/*
+ * Comments
+ */
+span.comment {
+	font-style: italic;
+	color: #555555;
+}
+
+th.comment, td.comment {
+	white-space: nowrap;
+}
+
 .comment-in-tooltip
 {
 	position: relative;
 	display: inline-block;
 	text-decoration: none;
 	outline: none;
-	cursor: help;
+	white-space: nowrap;
+/*	cursor: help;*/
 }
 
 .comment-in-tooltip span
@@ -209,11 +218,11 @@ th.required {
     transition: 0s visibility;
 	position: absolute;
 	top: 27px;
-/*	right: 50%;*/
 	right: -12px;
 	max-width: 230px;
 	margin-left: -210px;
 	padding: 7px;
+	white-space: normal;
 	z-index: 99;
 	background-color: #505050;
 	color: #ffffff;
