--- a/css/global.css
+++ b/css/global.css
@@ -179,7 +179,7 @@ table.error {
 
 img.info {
 	margin-left: 10px;
-	vertical-align:middle;
+	vertical-align: middle;
 }
 
 tr th.data{
@@ -279,14 +279,14 @@ header {
 	flex-flow: row wrap;
 }
 .conninfo {
-	flex:1;
+	flex: 1;
 }
 .connlinks {
-	padding-left:20px;
-	padding-right:30px;
+	padding-left: 20px;
+	padding-right: 30px;
 }
 .language {
-	padding-right:5px;
+	padding-right: 5px;
 }
 .topbar .platform, .topbar .host, .topbar .username, .topbar .port {
 	color: #ffffff;
@@ -308,11 +308,11 @@ header {
 	margin: 0;
 	padding: 5px;
 	text-align: left;
-	display:flex;
+	display: flex;
 	flex-flow: row wrap;
 }
 .crumb {
-	flex:1;
+	flex: 1;
 	padding-left: 3px;
 }
 .crumb a {
@@ -332,7 +332,7 @@ header {
 
 /** nav tabs **/
 nav {
-	display:flex;
+	display: flex;
 }
 .tab, .tab-inactive{
 	background-color: #f4f4f4;
@@ -567,17 +567,18 @@ ul.toplink, ul.navlink {
 }
 
 ul.navlink{
-	margin:20px 0 20px 20px;
+	margin: 20px 0 20px 20px;
 }
 
 ul.toplink li, ul.navlink li {
-	display:inline;
-	border-left:1px solid #b3b3b3;
-	margin:0;padding: 0 2px 0 5px;
+	display: inline;
+	border-left: 1px solid #b3b3b3;
+	margin: 0;
+	padding: 0 2px 0 5px;
 }
 ul.toplink li:first-child, ul.navlink li:first-child {
 	border: none;
-	padding-left:0;
+	padding-left: 0;
 }
 
 .dot {
@@ -607,8 +608,8 @@ div.form-container {
 	display: grid;
 	grid-template-columns: minmax(70px, min-content) min-content min-content;
 	grid-gap: 7px;
-	margin-top:4px;
-	margin-bottom:4px;
+	margin-top: 4px;
+	margin-bottom: 4px;
 }
 div.form-label {
 	white-space: nowrap;
@@ -722,7 +723,7 @@ div#fkcontainer {
     border:0px;
 }
 div.fk_value {
-	display:inline-block;
+	display: inline-block;
 }
 .highlight {
 	background-color: #FFFF00;
