In the page that displays SQL query results, replace the links list by buttons. To keep the existing parametric implementation, continue to generate <ul>, <li> and <a> structures. Reuse the existing printLinksList() function in misc.php, referencing a new "buttonlink" class. Add this class in the global.css file, and reuse most css attributes of the buttons.

--- a/css/global.css
+++ b/css/global.css
@@ -581,6 +581,32 @@ ul.toplink li:first-child, ul.navlink li:first-child {
 	padding-left: 0;
 }
 
+ul.buttonslist{
+	margin: 10px;
+	padding: 0px;
+}
+
+ul.buttonslist li {
+	display: inline;
+	background: #fa842f;
+	color: #ffffff;
+	font-size: 1em;
+	font-weight: bold;
+	margin: 2px 10px 2px 10px;
+	padding: 2px 15px 2px 15px;
+	border: 1px solid #fa842f;
+	border-radius: 60px;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.3);
+	cursor: pointer;
+}
+ul.buttonslist li:hover {
+	background: #ffffff;
+	color: #fa842f;
+	border: 1px solid #fa842f;
+}
+ul.buttonslist li a {
+	color: inherit;
+}
 .dot {
 	height: 10px;
 	width: 10px;
