Create a way to display various timestamp formats in tables, depending on the language. Two formats are used: a "short-term" format typically used for marks and rollbacks, and a "long-term" format typically used for groups. Unlike the long term format, the short term format does not show the year but shows the day of week. For both, the precision is the second. But the full timestamp is also visible as tooltip. All the timestamps columns have been adapted to use this formatting. For the tooltip style, reuse the css description for comments. In passing, transform the management of comment columns to share code with timestamp in a more generic way. This is done by inventing a new "spanned" data type for the Misc->printTable() function, accepting "cliplen" and "dateformat" attributes. This technic could be adapted to also cover intervals. But that is left for another patch.

--- a/css/global.css
+++ b/css/global.css
@@ -207,25 +207,21 @@ th.comment, td.comment {
 	white-space: nowrap;
 }
 
-.comment-in-tooltip
-{
+.tooltip {
 	position: relative;
 	display: inline-block;
 	text-decoration: none;
 	outline: none;
 	white-space: nowrap;
-/*	cursor: help;*/
 }
 
-.comment-in-tooltip span
-{
+.tooltip span {
 	visibility: hidden;
     transition: 0s visibility;
 	position: absolute;
 	top: 27px;
-	right: -12px;
-	max-width: 230px;
-	margin-left: -210px;
+	min-width: 215px;
+	max-width: 250px;
 	padding: 7px;
 	white-space: normal;
 	z-index: 99;
@@ -236,26 +232,33 @@ th.comment, td.comment {
 	opacity: .9;
 	box-shadow: -1px 2px 5px rgba(0,0,0,.45);
 }
-
-.comment-in-tooltip:hover span
-{
+.tooltip:hover span {
 	visibility: visible;
 	transition-delay: 0.2s;
 }
-
-.comment-in-tooltip span:before,
-.comment-in-tooltip span:after
-{
+.tooltip span:before, .tooltip span:after {
 	content: "";
 	position: absolute;
 	z-index: 100;
 	top: -8px;
-/*  right: 80%;*/
-	right: 25px;
 	margin-left: -8px;
 	border-left: 8px solid transparent;
 	border-right: 8px solid transparent;
 	border-bottom: 8px solid #505050;
+}
+
+.left-aligned-tooltip span {
+	left: -20px;
+}
+.left-aligned-tooltip span:before, .left-aligned-tooltip span:after {
+	left: 25px;
+}
+.right-aligned-tooltip span {
+	right: -25px;
+	margin-left: -210px;
+}
+.right-aligned-tooltip span:before, .right-aligned-tooltip span:after {
+	right: 25px;
 }
 
 /**
