--- a/css/global.css
+++ b/css/global.css
@@ -47,8 +47,15 @@ h4 {
 }
 
 h2 img, h3 img {
-	padding-top: 5px;
-	padding-left: 10px;
+	vertical-align: bottom;
+	padding-bottom: 2px;
+	margin-left: 10px;
+}
+h4 img {
+	vertical-align: bottom;
+	margin-left: 15px;
+	width: 22px;
+	height: 22px;
 }
 
 p.message {
@@ -767,7 +774,7 @@ a.fk_delete {
 }
 
 /*
-** tablesorter JQuery plugin css description
+ * tablesorter JQuery plugin css description
  */
 
 /* tables */
