Limit the risk of page header being higher when the "Groups configuration" tab is displayed (with oldest emaj versions). Fix the tabs height and shorten the tab caption for the groups configuration.

--- a/css/global.css
+++ b/css/global.css
@@ -347,7 +347,7 @@ nav {
 .tab, .tab-inactive{
 	background-color: #f4f4f4;
 	text-align: center;
-	vertical-align: top;
+	max-height:50px;
 	font-size: 1.1em;
 	border: 1px solid #dddddd;
 	border-top: #ffffff;
