--- a/css/global.css
+++ b/css/global.css
@@ -741,6 +741,20 @@ div.form-param-button {
 	font-size: 0.9em;
 }
 
+/** Specific div for the long objects lists (tables, sequences, marks, ...) **/
+div.longlist {
+	overflow: auto;
+	max-height: 9.5em;
+	margin-left: 4em;
+	margin-bottom: 2em;
+	width: max-content;
+	padding-right: 4em;
+	padding-left: 0.2em;
+	border: 1px solid #e8e8e8;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
+	border-radius: 7px;
+}
+
 /** FK browsing **/
 div#root {
 	position: absolute;
