--- a/css/global.css
+++ b/css/global.css
@@ -765,6 +765,7 @@ div.fk {
 	background-color: #308ac5;
 	border-left: 1px dotted #000;
 	border-radius: 7px;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 
 div#fkcontainer {
