Add an autorefresh toogle button in the rollback details page. This feature is usable when the rollback is not yet completed to automatically refresh the current page. The entire page is refreshed as most of its parts are changing. The autorefresh timeout is defined in the config.inc.php file with an 'auto_refresh' parameter that replaces the useless 'ajax_refresh' parameter. Its default value is 10s. The refresh feature is disabled when the parameter is set to 0.

--- a/css/global.css
+++ b/css/global.css
@@ -874,7 +874,9 @@ th.filtericon {
 	font-size: 0.9em;
 }
 
-/** Specific div for the emajrollbacks.php page **/
+/*
+ * Specific div for the emajrollbacks.php page
+ */
 div.rlbk-nav {
 	display: flex;
 	flex-flow: row wrap;
@@ -883,11 +885,78 @@ div.rlbk-nav {
 div.rlbk-nav >div {
 	text-align: center;
 }
-div.rlbk-nav-side {
+/* columns 1 and 5 */
+div.rlbk-nav-15 {
 	min-width: 80px;
 }
+/* columns 2 and 4 */
+div.rlbk-nav-24 {
+	min-width: 200px;
+}
+/* column 3 */
 div.rlbk-nav-title {
 	font-size: larger;
 	font-weight: bold;
-	margin-bottom: 5px;
+	margin-bottom: 8px;
+}
+
+/* The autorefresh slider */
+
+/* The switch - the box around the slider */
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 44px;
+	height: 24px;
+	white-space: nowrap;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border-radius: 20px;
+	background-color: #ccc;
+	cursor: pointer;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 16px;
+	width: 16px;
+	left: 4px;
+	bottom: 4px;
+	border-radius: 50%;
+	background-color: white;
+	line-height: 2;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+input:checked + .slider {
+	background-color: #308ac5;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1px #308ac5;
+}
+
+input:checked + .slider:before {
+	content: "";
+	-webkit-transform: translateX(20px);
+	-ms-transform: translateX(20px);
+	transform: translateX(20px);
 }
