In the E-Maj rollback details page, add a column to the steps table to show the quality of the step duration estimates. The column content is a coloured rectangle when the effective duration is larger than 10ms. The rectangle is green, when the ratio between the effective and the estimated durations is less than 2. It is orange when the ratio is between 2 and 5, and otherwise red. The rectangle width is a logarithmic representation of the step effective duration. This new column is sortable to group rows per color to help the estimates quality analysis. Also move the effective quantity column after the duration estimates and the quality evaluation.

--- a/css/global.css
+++ b/css/global.css
@@ -625,12 +625,25 @@ ul.buttonslist li a {
 	border-radius: 50%;
 	display: inline-block;
 }
+.rectangle {
+	height: 1.2em;
+	vertical-align:middle;
+	display: inline-block;
+	width: 1px;
+}
+.rectangle span {
+	display: none;
+}
 .redbg {
 	background-color: #ff0000;
+}
+.orangebg {
+	background-color: #ffa500;
 }
 .greenbg {
 	background-color: #00dd00;
 }
+
 pre {
 	font-size: 110%;
 }
@@ -959,4 +972,9 @@ input:checked + .slider:before {
 	-webkit-transform: translateX(20px);
 	-ms-transform: translateX(20px);
 	transform: translateX(20px);
+}
+
+/* The 9th column of the steps table */
+div#detailRlbkSteps td:nth-child(9) {
+	padding: 0px;
 }
