--- a/css/global.css
+++ b/css/global.css
@@ -107,10 +107,11 @@ a:hover {
 button {
 	cursor: pointer;
 }
-input[type=checkbox], input[type=password], input[type=text], input[type=number], input[type=radio] {
+input[type=text], input[type=password], input[type=number], input[type=checkbox], input[type=radio], textarea {
 	background: #ffffff;
 	border: 1px solid #5090c1;
 	border-radius: 5px;
+	box-sizing: border-box;
 	padding: 3px 5px 3px 5px;
 }
 input[type=submit], input[type=button], input[type=reset], button, .custom-file-upload {
@@ -146,8 +147,8 @@ input[type=number].priority {
 }
 
 .actionslist {
-	margin-top: 15px;
-	margin-bottom: 10px
+	margin-top: 20px;
+	margin-bottom: 15px
 }
 .actionslist form {
 	display: inline;
@@ -657,7 +658,7 @@ pre.error {
 /** Grid div for forms */
 div.form-container {
 	display: grid;
-	grid-template-columns: minmax(70px, min-content) min-content min-content;
+	grid-template-columns: minmax(70px, min-content) max-content min-content;
 	grid-gap: 7px;
 	margin-top: 4px;
 	margin-bottom: 4px;
