--- a/css/sqledit.css
+++ b/css/sqledit.css
@@ -28,7 +28,11 @@ html, body {
 
 input[type=text] {
 	width: 100%;
-	padding-right: 0px;
+}
+
+input[type=text].disabled {
+	border-color: grey;
+	opacity: 0.5;
 }
 
 textarea {
@@ -41,4 +45,15 @@ h2 {
 	margin-top: 1em;
 	margin-left: 0;
 	margin-right: 0;
+}
+
+.tooltip span {
+	top: 40px;
+	max-width: 400px;
+}
+
+a.disabled {
+	opacity: 0.5;
+	pointer-events: none;
+	cursor: default;
 }
