In the tables group details page, add a column to the marks table to figure out the log session each mark belongs to. Thanks to grey and green icons the user can easily detect intermediate periods of time when the tables group was stopped and thus changes were not recorded. This needs emaj version 4.4+.

--- a/css/global.css
+++ b/css/global.css
@@ -202,6 +202,9 @@ tr th.data{
 th.required {
 	text-decoration: underline
 }
+td.nopadding {
+	padding: 0px;
+}
 
 /*
  * Comments
@@ -623,6 +626,10 @@ ul.buttonslist li a {
 img.cellicon {
 	width: 18px;
 	margin: 1px;
+}
+img.fullsizecellicon {
+	height: 23px;
+	margin: 0px;
 }
 .dot {
 	height: 10px;
