Add a new 'Activity' tab to the main bar. It reports the E-Maj activity by tables groups, tables and sequences, showing the recorded changes since the latest mark of the group and since the previous display. A form at the page top allows to filter groups, tables and sequences. Some improvements may arise in the future. In passing, some existing strings in the language files have been mutualized.

--- a/css/global.css
+++ b/css/global.css
@@ -141,6 +141,10 @@ input[type="file"] {
 	opacity: 0;
 	pointer-events: none;
 }
+input[type=number] {
+	width: 5em;
+	text-align: center;
+}
 input[type=number].priority {
 	width: 5em;
 	text-align: right;
@@ -684,6 +688,8 @@ div.form-container-5c {
 div.form-header {
 	white-space: nowrap;
 	text-align: center;
+	text-decoration-line: underline;
+	font-style: italic;
 }
 div.form-label {
 	white-space: nowrap;
