Improve the rollback details page. Remove the display/hide step estimates button which is useless with the previous patch. Move the info about steps estimates into the upper title of the 4 columns related to them. This needed to add a new 'upper_title_info' column property for the misc->printTable() function. Also remove the specific formatting of these columns now they are visualy well identified.

--- a/css/emajrollbacks.css
+++ b/css/emajrollbacks.css
@@ -26,7 +26,7 @@ div.rlbk-nav-title {
 	margin-bottom: 8px;
 }
 
-/* The 9th column of the steps table */
-div#detailRlbkSteps td:nth-child(9) {
+/* The 11th column of the steps table (Estimate quality indicator) */
+div#detailRlbkSteps td:nth-child(11) {
 	padding: 0px;
 }
