--- a/css/global.css
+++ b/css/global.css
@@ -28,15 +28,23 @@ h1 {
 	color: #308ac5;
 }
 h2, h3 {
-	font-size: 1.2em;
 	font-weight: bold;
 	padding: 4px 10px 4px 10px;
-	margin-top: 1.1em;
-	margin-bottom: 1em;
+	margin-bottom: 1.1em;
 	color: #ffffff;
 	background-color: #308ac5;
 	border-radius: 7px;
 	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
+}
+h2 {
+	font-size: 1.2em;
+	margin-top: 1.1em;
+}
+h3 {
+	font-size: 1.05em;
+	opacity: 75%;
+	margin-right: 10%;
+	margin-top: 1.4em;
 }
 h4 {
 	font-size: 1.1em;
@@ -150,12 +158,11 @@ input[type=number].priority {
 	text-align: right;
 }
 
-.actionslist {
-	margin-top: 20px;
-	margin-bottom: 15px
-}
-.actionslist form {
-	display: inline;
+div.actionslist {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	display:flex;
+	align-items: center;
 }
 .actionslist input {
 	margin-left: 15px;
@@ -680,7 +687,7 @@ div.form-container {
 }
 div.form-container-5c {
 	display: grid;
-	grid-template-columns: minmax(70px, min-content)  min-content  min-content max-content min-content;
+	grid-template-columns: minmax(70px, min-content) min-content min-content max-content min-content;
 	grid-gap: 7px;
 	margin-top: 4px;
 	margin-bottom: 4px;
@@ -914,6 +921,12 @@ button.filterreset:hover {
 	background-color: #ffffff;
 	border: 1px solid #308ac5;
 }
+button.filterreset:disabled {
+	background: #d0d0d0;
+	border: 1px solid #d0d0d0;
+	cursor: not-allowed;
+}
+
 th.filtericon {
 	vertical-align: bottom;
 	width: 3.8em;
