--- a/css/global.css
+++ b/css/global.css
@@ -958,6 +958,8 @@ th.filtericon {
 	right: 0;
 	bottom: 0;
 	border-radius: 20px;
+	border: solid #aaa 1px;
+	box-shadow: -1px 2px 5px rgba(0,0,0,.3);
 	background-color: #ccc;
 	cursor: pointer;
 	-webkit-transition: .4s;
@@ -970,7 +972,7 @@ th.filtericon {
 	height: 16px;
 	width: 16px;
 	left: 4px;
-	bottom: 4px;
+	bottom: 3px;
 	border-radius: 50%;
 	background-color: white;
 	line-height: 2;
@@ -991,4 +993,9 @@ input:checked + .slider:before {
 	-webkit-transform: translateX(20px);
 	-ms-transform: translateX(20px);
 	transform: translateX(20px);
+}
+
+input:disabled + .slider {
+	cursor: not-allowed;
+	opacity: 50%;
 }
