Display the current date and time in the page header, just before the arrow that reaches the page bottom. The date and time value is built in javascript on the client side to get the user local time and format. In the activity page, the current date and time cell of the global activity table is removed as it is now redundant.

--- a/css/global.css
+++ b/css/global.css
@@ -351,6 +351,10 @@ header {
 .crumb .icon {
 	margin-right: 5px;
 }
+.datetime {
+	padding-right: 10px;
+	font-size: 0.95em;
+}
 .trailicons img {
 	padding: 1px 5px 1px 5px;
 }
