--- a/css/global.css
+++ b/css/global.css
@@ -300,7 +300,7 @@ header {
 	box-shadow: -1px 2px 5px rgba(0,0,0,.25);
 }
 
-/** Top bar */
+/** Top bar **/
 
 .topbar {
 	margin: 0;
@@ -309,32 +309,40 @@ header {
 	display: flex;
 	flex-flow: row wrap;
 }
-.conninfo {
-	flex: 1;
+.datetime {
+	padding-right: 10px;
+	font-size: 0.95em;
 }
-.connlinks {
-	padding-left: 20px;
-	padding-right: 30px;
+.conninfo {
+	display: flex;
+	flex: 2;
+	justify-content: right;
+	margin-right: 25px;
+}
+.conninfo .platform, .conninfo .username, .datetime #currentdate, .datetime #currenttime {
+	color: #ffffff;
+}
+.conninfo img.help-icon {
+	width: 16px;
+	height : 16px;
+	margin-left: 12px;
+	margin-top: 2px;
+}
+.conninfo img.button {
+	width: 22px;
+	height : 22px;
+	margin-left: 18px;
 }
 .language {
 	padding-right: 5px;
 }
-.topbar .platform, .topbar .host, .topbar .username, .topbar .port {
-	color: #ffffff;
-}
-.topbar a {
-	color: #cfcfcf;
-}
-.topbar a:hover {
-	color: #ffffff;
-	text-decoration: underline;
-}
-.topbar select {
+.language select {
 	background-color: #484850;
+	border-color: #cfcfcf;
 	color: #cfcfcf;
 }
 
-/** Trail **/
+/** Trail bar **/
 .trail {
 	margin: 0;
 	padding: 5px;
@@ -357,15 +365,22 @@ header {
 .crumb .icon {
 	margin-right: 5px;
 }
-.datetime {
-	padding-right: 10px;
-	font-size: 0.95em;
-}
 .trailicons img {
 	padding: 1px 5px 1px 5px;
 }
+.connlinks {
+	padding-left: 20px;
+	padding-right: 30px;
+}
+.connlinks a {
+	color: #cfcfcf;
+}
+.connlinks a:hover {
+	color: #ffffff;
+	text-decoration: underline;
+}
 
-/** nav tabs **/
+/** Nav tabs bar **/
 nav {
 	display: flex;
 }
