In the table properties page, improve the sheet showing the table structure. Add filter and sort capabilities. Transform the 'NOT NULL' text from the 'NOT NULL' column into a tick mark icon. Transform the 'Default' column into a double column named 'valuation' 'type' and 'expression'. This allows to distinguish the columns set as GENERATED AS IDENTITY (BY DEFAULT or ALWAYS) or GENERATED AS expression (STORED or virtual) and columns with a simple DEFAULT expression. For GENERATED AS IDENTITY column, show the associated sequence name in the expression column. Thanks to Raphaël Beaudoin for his help in new icons design.

--- a/css/global.css
+++ b/css/global.css
@@ -661,7 +661,7 @@ ul.buttonslist li a {
 	color: inherit;
 }
 img.cellicon {
-	width: 18px;
+	height: 18px;
 	margin: 1px;
 }
 img.fullsizecellicon {
